# CloudTray

./: CLAUDE.md  License.txt  README.md  index.html  package.json
.github/workflows/: release.yml
docs/: index.html  privacy-policy.html  terms-of-service.html
public/locales/: en.json  pt.json
src/: App.css  App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  config.rs  drive.rs  main.rs
src/components/: Button.tsx  Separator.tsx
src/tabs/About/: About.css  About.tsx
src/tabs/Recents/: Recents.css  Recents.tsx
src/tabs/settings/: Settings.css  Settings.tsx
