[package]
name = "cloudtray"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-create-dir", "fs-read-file", "fs-write-file", "fs-exists", "fs-read-dir", "dialog-open", "macos-private-api", "shell-open", "system-tray"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
window-vibrancy = "0.4.0"
window-shadows = "0.2.2"
tokio = { version = "1.0", features = ["fs", "io-util"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-oauth = "1.0.0"
chrono = "0.4"
dark-light = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
